--- a/index.html
+++ b/index.html
@@ -32,5 +32,30 @@
 
     <title>Zomato Landing Page Clone</title>
   </head>
-  <body></body>
+  <body>
+    <section class="heroSection">
+      <header>
+        <nav class="navbar">
+          <a href="#">Get the App</a>
+          <div class="navbarMenuContainer">
+            <a href="#" class="link">Invent Relations</a>
+            <a href="#" class="link">Add Restaurant</a>
+            <a href="#" class="link">Login</a>
+            <a href="#" class="link">Sign Up</a>
+            <a href="#" class="user_icon">
+              <i class="fa-solid fa-user"></i>
+            </a>
+          </div>
+        </nav>
+      </header>
+      <div>
+        <img src="./images/heroSectionLogo.png" alt="Zomato logo" class="heroSectionLogo">
+        <h1>Discover the best foods and drinks in Hampi Hospet </h1>
+        <div>
+          <input type="text" class="input" placeholder="Hampi-Hospet" />
+          <input type="text" class="input" placeholder="Search for a Restaurant, Cuisine or a dish " />
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
